--- a/package.json
+++ b/package.json
@@ -223,9 +223,9 @@
     "cypress": "5.3.0",
     "d3": "6.2.0",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
-    "epic-spinners": "1.1.0",
     "electron": "^12.0.2",
     "electron-builder": "^22.10.5",
+    "epic-spinners": "1.1.0",
     "eslint": "7.12.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "15.0.0",
@@ -256,6 +256,7 @@
     "mini-css-extract-plugin": "0.11.3",
     "moment-duration-format": "2.3.2",
     "moment-timezone-data-webpack-plugin": "1.3.0",
+    "node-pre-gyp": "^0.17.0",
     "offline-plugin": "5.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pako": "1.0.11",
