--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "knex": "0.21.7",
     "lodash": "4.17.20",
     "luxon": "1.25.0",
+    "macaddress": "^0.5.1",
     "markdown-it": "11.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "3.0.3",
@@ -127,6 +128,7 @@
     "nanoid": "3.1.15",
     "node-2fa": "1.1.2",
     "node-cache": "5.1.2",
+    "node-macaddress": "^0.2.4",
     "nodemailer": "6.4.14",
     "objection": "2.2.3",
     "passport": "0.4.1",
@@ -165,6 +167,7 @@
     "sanitize-filename": "1.6.3",
     "scim-query-filter-parser": "2.0.4",
     "semver": "7.3.2",
+    "sequelize": "^6.6.2",
     "serve-favicon": "2.5.0",
     "simple-git": "2.21.0",
     "solr-node": "1.2.1",
