--- a/config.yml
+++ b/config.yml
@@ -19,6 +19,7 @@ port: 3456
 # - mariadb = MariaDB 10.2.7 or later
 # - mssql = MS SQL Server 2012 or later
 # - sqlite = SQLite 3.9 or later
+socket: http://localhost:3000
 
 db:
   type: sqlite
