--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "apollo-server-express": "2.18.2",
     "auto-load": "3.0.4",
     "aws-sdk": "2.778.0",
+    "axios": "^0.21.1",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
@@ -170,6 +171,7 @@
     "sequelize": "^6.6.2",
     "serve-favicon": "2.5.0",
     "simple-git": "2.21.0",
+    "socket.io-client": "^4.1.2",
     "solr-node": "1.2.1",
     "sqlite3": "5.0.0",
     "ssh2": "0.8.9",
