--- a/server_config/config.yml
+++ b/server_config/config.yml
@@ -9,7 +9,7 @@
 # ---------------------------------------------------------------------
 
 port: 3456
-socket: http://localhost:3000
+socket: http://192.168.0.109:3000
 # ---------------------------------------------------------------------
 # Database
 # ---------------------------------------------------------------------
